Continue facet spec standardization and update code gen accordingly